--- a/src/components/css/Help.css
+++ b/src/components/css/Help.css
@@ -1,7 +1,6 @@
 .help {
   background: rgba(255, 255, 255, 0.9);
-  color: black;
-  border-radius: 0.5em;
+  color: black; border-radius: 0.5em;
   width: calc(var(--card-width) * 2 * var(--card-ratio));
   height: calc(var(--card-height) * 2 * var(--card-ratio));
 }
@@ -25,10 +24,14 @@
   font-weight: normal;
 }
 .help .close {
+  cursor: pointer;
   position: absolute;
   top: 0;
   left: 0;
   height: 40px;
   line-height: 40px;
   padding-left: 10px;
+}
+.help .close:hover {
+  text-shadow: 0 1px 10px #FFD700, 0 2px 10px #FFAB00;
 }
