--- a/src/components/css/SettingsPanel.css
+++ b/src/components/css/SettingsPanel.css
@@ -54,10 +54,14 @@
   text-shadow: 0 1px 10px #FFD700, 0 2px 10px #FFAB00;
 }
 .settings .close {
+  cursor: pointer;
   position: absolute;
   top: 0;
   left: 0;
   height: 40px;
   line-height: 40px;
   padding-left: 10px;
+}
+.settings .close:hover {
+  text-shadow: 0 1px 10px #FFD700, 0 2px 10px #FFAB00;
 }
