--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -18,25 +18,10 @@
 
   border-radius: 1em;
   padding: var(--card-border);
-  background: linear-gradient(to right, var(--gold-one) 0%, var(--gold-two) 50%, var(--gold-three) 100%);
-  background-size: 300% 300%;
+  background: linear-gradient(to top, var(--gold-three) 0%, var(--gold-two) 1%, var(--gold-two) 25%, var(--gold-one) 25%, var(--gold-one) 100%);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 15%);
 }
 
-.card:hover {
-  animation: shiny-gold 1s linear infinite;
-}
-
-@keyframes shiny-gold {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
 .card.back .title {
   display: none;
 }
