--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -40,3 +40,9 @@
   border-radius: 1em;
   width: calc(var(--card-ratio) * var(--card-width));
 }
+
+.card.front img.card-back,
+.card.back img.card-front,
+.card:not(:last-child) img {
+  display: none;
+}
