--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -22,6 +22,7 @@
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 15%);
 }
 
+.card.options .title,
 .card.back .title {
   display: none;
 }
@@ -41,6 +42,12 @@
   width: calc(var(--card-ratio) * var(--card-width));
 }
 
+
+.card.front .options, .card.back .options {
+  display: none;
+}
+
+.card.options img,
 .card.front img.card-back,
 .card.back img.card-front,
 .card:not(:last-child) img {
