--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -22,10 +22,67 @@
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 15%);
 }
 
-.card.options .title,
+.card.definition .title,
 .card.back .title {
   display: none;
 }
+
+.card .definition,
+.card .definition a {
+  color: #000;
+}
+
+.card.text .definition {
+  display: inline-block;
+  text-align: left;
+}
+
+.card .definition dl {
+  margin: 0;
+}
+
+.card .definition dt {
+  text-align: center;
+  font-size: 24px;
+}
+.card .definition dd {
+  margin: 35px 0 25px;
+}
+
+.card .definition {
+  --padding: 10px;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  padding: var(--padding);
+  display: none;
+  border-radius: 1em;
+  width: calc(var(--card-ratio) * var(--card-width) - var(--padding) * 2);
+  height: calc(var(--card-ratio) * var(--card-height) - var(--padding) * 2);
+  background-color: #76B4FF;
+}
+
+.card .definition ul {
+  text-align: center;
+  bottom: 0;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.card .definition li:hover {
+  background-color: #91C7FF;
+}
+
+.card .definition li {
+  border-top: 2px solid #4073FF;
+  cursor: pointer;
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #333333;
+}
+
 .card .title {
   display: block;
   font-size: 24px;
@@ -42,12 +99,6 @@
   width: calc(var(--card-ratio) * var(--card-width));
 }
 
-
-.card.front .options, .card.back .options {
-  display: none;
-}
-
-.card.options img,
 .card.front img.card-back,
 .card.back img.card-front,
 .card:not(:last-child) img {
