--- a/src/components/css/Draggable.css
+++ b/src/components/css/Draggable.css
@@ -9,11 +9,11 @@
 }
 
 
-.draggable-item.options .options {
+.card-group.options .options {
   display: inline-block;
 }
 
-.draggable-item .options {
+.card-group .options {
   position: relative;
   display: none;
   border-radius: 1em;
@@ -21,36 +21,32 @@
   height: calc(var(--card-ratio) * var(--card-height));
   background-color: #76B4FF;
 }
-.draggable-item .options hr {
+.card-group .options hr {
   margin: 0;
   border-top: 1px solid #61ABFF;
   border-bottom: 1px solid #4073FF;
 }
-.draggable-item .options h3 {
+.card-group .options h3 {
   padding: 10px 0;
   margin: 0;
   color: #000;
 }
 
-.draggable-item .options ul {
+.card-group .options ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.draggable-item .options ul li:hover {
+.card-group .options ul li:hover {
   background-color: #91C7FF;
 }
-.draggable-item .options ul li {
+.card-group .options ul li {
   cursor: pointer;
   display: block;
   padding: 10px 10px;
   text-decoration: none;
   color: #333333;
-}
-
-.card-group {
-  position: absolute;
 }
 
 .card-group .options,
