--- a/src/components/css/SettingsPanel.css
+++ b/src/components/css/SettingsPanel.css
@@ -10,6 +10,13 @@
   width: calc(var(--card-width) * 2 * var(--card-ratio));
   height: calc(var(--card-height) * 2 * var(--card-ratio));
 }
+.settings a {
+  color: #000;
+}
+.settings a:hover {
+  color: #000;
+  text-decoration: underline;
+}
 .settings .title {
   border-radius: 0.5em 0.5em 0 0;
   background: rgba(255, 255, 255, 0.8);
