--- a/src/components/css/Help.css
+++ b/src/components/css/Help.css
@@ -3,6 +3,7 @@
   color: black; border-radius: 0.5em;
   width: calc(var(--card-width) * 2 * var(--card-ratio));
   height: calc(var(--card-height) * 2 * var(--card-ratio));
+  overflow: auto;
 }
 .help .title {
   border-radius: 0.5em 0.5em 0 0;
