📖 Update meta containers styling.

--- a/src/components/css/Draggable.css
+++ b/src/components/css/Draggable.css
@@ -58,7 +58,7 @@
 .card-group .options ul li {
   cursor: pointer;
   display: block;
-  padding: 10px 10px;
+  padding: 7px 0;
   text-decoration: none;
   color: #333333;
 }
