--- a/src/components/css/Help.css
+++ b/src/components/css/Help.css
@@ -1,14 +1,16 @@
 .help {
   background: rgba(255, 255, 255, 0.9);
   color: black; border-radius: 0.5em;
-  width: calc(var(--card-width) * 2 * var(--card-ratio));
-  height: calc(var(--card-height) * 2 * var(--card-ratio));
+  width: calc(var(--card-width) * 1.2 * var(--card-ratio));
+  height: calc(var(--card-height) * 1.2 * var(--card-ratio));
   overflow: auto;
+  cursor: default;
 }
 .help .title {
   border-radius: 0.5em 0.5em 0 0;
   background: rgba(255, 255, 255, 0.8);
   padding: 3px;
+  cursor: grab;
 }
 .help .content {
   text-align: left;
