--- a/src/components/css/SettingsPanel.css
+++ b/src/components/css/SettingsPanel.css
@@ -7,9 +7,10 @@
   background: rgba(255, 255, 255, 0.9);
   color: black;
   border-radius: 0.5em;
-  width: calc(var(--card-width) * 2 * var(--card-ratio));
-  height: calc(var(--card-height) * 2 * var(--card-ratio));
+  width: 300px;
+  height: 400px;
   overflow: auto;
+  cursor: default;
 }
 .settings a {
   color: #000;
@@ -22,6 +23,7 @@
   border-radius: 0.5em 0.5em 0 0;
   background: rgba(255, 255, 255, 0.8);
   padding: 3px;
+  cursor: grab;
 }
 .settings .content {
   text-align: left;
@@ -40,6 +42,7 @@
   padding: 10px;
   width: calc(100% - 20px);
   border-radius: 0.25em;
+  margin-top: 10px;
 }
 .settings .content p {
   font-family: var(--font-family);
@@ -52,6 +55,10 @@
   border-radius: 0.5em;
 }
 
+.settings .item .option {
+  cursor: pointer;
+}
+
 .settings .item.card-size span.value,
 .settings .item.volume span.value {
   margin: 0 20px;
@@ -59,14 +66,14 @@
 
 .settings .item label.item-label {
   display: inline-block;
-  width: 35%;
+  width: 75px;
   text-align: left;
 }
 .settings .item.card-size span,
 .settings .item.volume span {
   font-size: 20px;
 }
-.settings .item.volume span:hover {
+.settings .item .option:hover {
   text-shadow: 0 1px 10px #FFD700, 0 2px 10px #FFAB00;
 }
 .settings .close {
