--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,10 @@
 }
 
 #root {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   display: block;
+  overflow: hidden;
 }
 
 body {
@@ -19,7 +21,6 @@ body {
   background-color: var(--teal);
   background-image: url('../public/assets/img/felt.png');
 
-  display: flex;
   height: 100vh;
   overflow: hidden;
 }
