♥️ Pickup fallen cards.

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 
 :root {
   --teal: #008080;
+  --lavender: #B57EDC;
   --white: #e6f1ff;
+  --royal-gold-1: #FFD700;
+  --royal-gold-2: #FFB300;
+  --royal-gold-3: #FFA500;
   --font-family: 'Gill Sans MT', 'Gill Sans', sans-serif;
 }
 
