--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -3,10 +3,6 @@
   --card-width: 300px;
   --card-height: 420px;
   --card-border: 1px;
-
-  --gold-one: #D4AF37;
-  --gold-two: #C6A734;
-  --gold-three: #B7952F;
 }
 
 .card {
@@ -18,8 +14,14 @@
 
   border-radius: 1em;
   padding: var(--card-border);
-  background: linear-gradient(to top, var(--gold-three) 0%, var(--gold-two) 1%, var(--gold-two) 25%, var(--gold-one) 25%, var(--gold-one) 100%);
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(
+    to top,
+    var(--royal-gold-3) 0%,
+    var(--royal-gold-2) 1%,
+    var(--royal-gold-2) 25%,
+    var(--royal-gold-1) 25%,
+    var(--royal-gold-1) 100%
+  );
 }
 
 .options {
