--- a/src/components/css/Draggable.css
+++ b/src/components/css/Draggable.css
@@ -8,7 +8,6 @@
   height: calc(var(--card-ratio) * var(--card-height));
 }
 
-
 .card-group.options .options {
   display: inline-block;
 }
@@ -43,14 +42,32 @@
   border-radius: 1em;
 }
 
+.card-group .card:first-child {
+  /* When the card is not being dragged */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 .neodrag-dragging {
-  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2);
+  /* When the card pile is being dragged */
+  box-shadow:
+    0 4px 8px rgba(0, 0, 0, 0.2),
+    0 16px 32px rgba(0, 0, 0, 0.2);
 }
 
-.has-overlap {
-  box-shadow: 0 0 16px 0 rgba(255, 255, 255, 0.8);
+@keyframes rainbow {
+  0% { box-shadow: 0 0 24px 0 rgba(255, 0, 0, 1); }
+  16.6% { box-shadow: 0 0 24px 0 rgba(255, 165, 0, 1); }
+  33.3% { box-shadow: 0 0 24px 0 rgba(255, 255, 0, 1); }
+  50% { box-shadow: 0 0 24px 0 rgba(0, 255, 0, 1); }
+  66.6% { box-shadow: 0 0 24px 0 rgba(0, 0, 255, 1); }
+  83.3% { box-shadow: 0 0 24px 0 rgba(238, 130, 238, 1); }
+  100% { box-shadow: 0 0 24px 0 rgba(255, 0, 0, 1); }
 }
 
+.neodrag-dragging.has-overlap {
+  /* When the pile is overlapping another pile */
+  animation: rainbow 5s linear infinite;
+}
 
 .card-group .options ul li:hover {
   background-color: #91C7FF;
